--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.pfe_mobile_app">
+    package="com.example.nodetztq">
    <application
-        android:label="pfe_mobile_app"
+        android:label="nodetztq"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
