--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.0.0-dev.5
+  api_cache_manager: ^1.0.2
+  snippet_coder_utils: ^1.0.9
+  flutter_progress_hud: ^2.0.2
   intl: ^0.17.0
   freezed_annotation: any
   flutter_candlesticks:
@@ -50,6 +53,15 @@ dependencies:
   image_picker: ^0.8.4+4
   cached_network_image: ^3.1.0
   shared_preferences: ^2.0.20
+  date_field: ^3.0.2
+  photo_view: ^0.12.0
+  flutter_svg: ^0.22.0
+  flutter_colorpicker: ^0.5.0
+  image: ^3.0.2
+  dio: ^5.1.1
+  open_file: ^3.2.1
+  path_provider: ^2.0.14
+
 
 dev_dependencies:
   flutter_test:
